--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,11 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.min.js"></script>
 <script src="app.js"></script>
+<script src="config/config.js"></script>
 <script src="components/api/api.js"></script>
 <script src="components/polygonfrompoints/polygonfrompoints.js"></script>
 <script src="components/canvas/canvas.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
+<script src="events/events.js"></script>
 </body>
 </html>
