--- a/app/events/events.html
+++ b/app/events/events.html
@@ -1,3 +1,5 @@
 <ul>
-    <li ng-repeat="event in events">{{event.name}}</li>
+    <li ng-repeat="event in events">
+        <a href="#/event/{{event.id}}">{{event.name}} - {{event.dateandtime}}</a>
+    </li>
 </ul>
