--- a/app/index.html
+++ b/app/index.html
@@ -8,25 +8,28 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="bower_components/skeleton-css/css/normalize.css">
+    <link rel="stylesheet" href="bower_components/skeleton-css/css/skeleton.css">
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
 <div class="container">
     <div ng-view></div>
 </div>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.20/angular.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.20/angular-route.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.20/angular-resource.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/underscore/underscore.js"></script>
+<script src="bower_components/ocanvas/index.js"></script>
 <script src="app.js"></script>
 <script src="config/config.js"></script>
 <script src="components/api/api.js"></script>
 <script src="components/polygonfrompoints/polygonfrompoints.js"></script>
 <script src="components/canvas/canvas.js"></script>
+<script src="components/reserver/reserver.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
 <script src="events/events.js"></script>
+<script src="event/event.js"></script>
+<script src="block/block.js"></script>
 </body>
 </html>
