Add toolbar and checkout

--- a/app/index.html
+++ b/app/index.html
@@ -26,10 +26,13 @@
 <script src="components/api/api.js"></script>
 <script src="components/polygonfrompoints/polygonfrompoints.js"></script>
 <script src="components/canvas/canvas.js"></script>
+<script src="components/basket/basket.js"></script>
 <script src="components/reserver/reserver.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
+<script src="components/toolbar/toolbar.js"></script>
 <script src="events/events.js"></script>
 <script src="event/event.js"></script>
 <script src="block/block.js"></script>
+<script src="checkout/checkout.js"></script>
 </body>
 </html>
