--- a/app/block/block.html
+++ b/app/block/block.html
@@ -1,3 +1,6 @@
-<div ng-show="block.block.seatplan_image_data_url !== null">
-    <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="block.event_id" seats="block.seats">
+<div class="row">
+    <div class="seven columns" ng-show="block.block.seatplan_image_data_url !== null">
+        <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="block.event_id" seats="block.seats">
+    </div>
 </div>
+<toolbar/>
