--- a/app/event/event.html
+++ b/app/event/event.html
@@ -1,8 +1,16 @@
-<h2>{{event.name}}</h2>
-<p>{{event.dateandtime}}</p>
-<ul>
-    <li ng-repeat="block in event.blocks">
-        <a href="#/block/{{block.id}}">{{block.block.name}}</a>
-    </li>
-</ul>
-<toolbar/>
+<div class="row">
+    <div class="twelve columns">
+        <toolbar/>
+    </div>
+</div>
+<div class="row">
+    <div class="twelve columns">
+        <h2>{{event.name}}</h2>
+        <p>{{event.dateandtime}}</p>
+        <ul>
+            <li ng-repeat="block in event.blocks">
+                <a href="#/block/{{block.id}}">{{block.block.name}}</a>
+            </li>
+        </ul>
+    </div>
+</div>
