--- a/app/events/events.html
+++ b/app/events/events.html
@@ -1,6 +1,14 @@
-<ul>
-    <li ng-repeat="event in events">
-        <a href="#/event/{{event.id}}">{{event.name}} - {{event.dateandtime}}</a>
-    </li>
-</ul>
-<toolbar/>
+<div class="row">
+    <div class="twelve columns">
+        <toolbar/>
+    </div>
+</div>
+<div class="row">
+    <div class="twelve columns">
+        <ul class="event-list">
+            <li ng-repeat="event in events">
+                <a href="#/event/{{event.id}}">{{event.name}} - {{event.dateandtime}}</a>
+            </li>
+        </ul>
+    </div>
+</div>
