--- a/app/customer.html
+++ b/app/customer.html
@@ -25,7 +25,7 @@
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/ocanvas/index.js"></script>
 <script src="customer.app.js"></script>
-<script src="config/config.js"></script>
+<script src="customer.config/config.js"></script>
 <script src="components/api/api.js"></script>
 <script src="components/polygonfrompoints/polygonfrompoints.js"></script>
 <script src="components/canvas/canvas.js"></script>
