Add admin interface

--- a/app/admin.html
+++ b/app/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ticketbox.customer">
+<html lang="en" ng-app="ticketbox.admin">
 <head>
     <meta charset="utf-8">
     <title>Ticket reservation</title>
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="bower_components/skeleton-css/css/normalize.css">
     <link rel="stylesheet" href="bower_components/skeleton-css/css/skeleton.css">
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="customer.app.css">
+    <link rel="stylesheet" href="admin.app.css">
     <!-- /stylesheets -->
 </head>
 <body>
@@ -25,19 +25,17 @@
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/ocanvas/index.js"></script>
-<script src="customer.app.js"></script>
-<script src="customer.config/config.js"></script>
+<script src="admin.app.js"></script>
+<script src="admin.config/config.js"></script>
 <script src="components/api/api.js"></script>
 <script src="components/polygonfrompoints/polygonfrompoints.js"></script>
 <script src="components/canvas/canvas.js"></script>
-<script src="components/basket/basket.js"></script>
-<script src="components/reserver/reserver.js"></script>
-<script src="components/seatplan/seatplan.js"></script>
-<script src="common.toolbar/common.toolbar.js"></script>
-<script src="common.events/common.events.js"></script>
-<script src="common.event/common.event.js"></script>
-<script src="common.block/common.block.js"></script>
-<script src="customer.checkout/customer.checkout.js"></script>
+<script src="components/itemlist/itemlist.js"></script>
+<script src="admin.dashboard/admin.dashboard.js"></script>
+<script src="admin.reservations/admin.reservations.js"></script>
+<script src="admin.events/admin.events.js"></script>
+<script src="admin.blocks/admin.blocks.js"></script>
+<script src="admin.categories/admin.categories.js"></script>
 <!-- /scripts -->
 </body>
 </html>
