--- a/app/boxoffice.html
+++ b/app/boxoffice.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="bower_components/skeleton-css/css/normalize.css">
     <link rel="stylesheet" href="bower_components/skeleton-css/css/skeleton.css">
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="boxoffice.app.css">
     <!-- /stylesheets -->
 </head>
 <body>
