--- a/app/admin.reservations/admin.reservations.html
+++ b/app/admin.reservations/admin.reservations.html
@@ -8,6 +8,7 @@
         {{eventAggregate.event.name}} - {{eventAggregate.event.dateandtime}}
     </div>
     <div class="four columns">
-        <strong>{{eventAggregate.reservations.length}}</strong> Reservations
+        <strong>{{eventAggregate.reservations.length}}</strong> Reservations<br>
+        <strong>{{eventAggregate.boxofficePurchases.length}}</strong> Boxoffice purchases<br>
     </div>
 </div>
