--- a/app/boxoffice.checkout/boxoffice.checkout.html
+++ b/app/boxoffice.checkout/boxoffice.checkout.html
@@ -16,6 +16,11 @@
                 <div class="clear"></div>
             </li>
         </ul>
-        <a class="button button-primary" ng-click="createBoxofficePurchase()">Finish reservation</a>
+        <a class="checkout button button-primary" ng-click="createBoxofficePurchase()">Finish reservation</a>
+    </div>
+</div>
+<div class="row">
+    <div class="twelve columns">
+        &nbsp;
     </div>
 </div>
