--- a/app/common.toolbar/common.toolbar.html
+++ b/app/common.toolbar/common.toolbar.html
@@ -9,7 +9,7 @@
         <div class="twelve columns">
             <p>
                 <a class="button button-primary" href="#/events">Select more seats</a>
-                <a class="button button-primary" ng-show="reservations.length > 0" href="#/checkout">Checkout & Reductions</a>
+                <a class="button button-primary" ng-show="reservations.length > 0" href="#/checkout">Checkout &amp; Reductions</a>
                 <a class="button button-primary" ng-show="reservations.length > 0" ng-click="cancel()">Cancel</a>
             </p>
         </div>
