--- a/app/admin.html
+++ b/app/admin.html
@@ -47,6 +47,7 @@
 <script src="admin.blocks/admin.blocks.js"></script>
 <script src="admin.categories/admin.categories.js"></script>
 <script src="admin.reservations.printout/admin.reservations.printout.js"></script>
+<script src="admin.event.blocks/admin.event.blocks.js"></script>
 <script src="admin.block.image/admin.block.image.js"></script>
 <script src="admin.block.seats/admin.block.seats.js"></script>
 <!-- /scripts -->
