--- a/app/common.events/common.events.html
+++ b/app/common.events/common.events.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
     <div class="twelve columns">
-        <ul class="event-list">
+        <ul class="item-list">
             <li ng-repeat="event in events">
                 <a href="#/event/{{event.id}}">{{event.name}} - {{event.dateandtime}}</a>
             </li>
