Add back button to reservations page

--- a/app/admin.reservations/admin.reservations.html
+++ b/app/admin.reservations/admin.reservations.html
@@ -1,3 +1,8 @@
+<div class="row admin-toolbar">
+    <div class="twelve columns">
+        <a class="button button-primary" href="#/dashboard">back</a>
+    </div>
+</div>
 <div class="row dashboard-title-row">
     <div class="twelve columns">
         <h2>Reservations</h2>
