--- a/app/common.events/common.events.html
+++ b/app/common.events/common.events.html
@@ -12,3 +12,8 @@
         </ul>
     </div>
 </div>
+<div class="row">
+    <div class="twelve columns">
+        <p><translate>PROBLEMS CONTACT TEXT</translate> {{administrator.firstname}} {{administrator.lastname}}: <a href="mailto:{{administrator.email}}">{{administrator.email}}</a>.</p>
+    </div>
+</div>
