Small UI and translation improvments

--- a/app/boxoffice.checkout/boxoffice.checkout.html
+++ b/app/boxoffice.checkout/boxoffice.checkout.html
@@ -16,7 +16,7 @@
                 <div class="clear"></div>
             </li>
         </ul>
-        <a class="checkout button button-primary" ng-click="createBoxofficePurchase()" translate>FINISH RESERVATION</a>
+        <a class="checkout button button-primary" ng-click="createBoxofficePurchase()" translate>SELL</a>
     </div>
 </div>
 <div class="row">
