--- a/app/common.block/common.block.html
+++ b/app/common.block/common.block.html
@@ -5,7 +5,8 @@
 </div>
 <div class="row">
     <div class="twelve columns">
-        <h2>{{block.event.name}} - {{block.event.dateandtime}}</h2>
+        <h2>{{block.event.name}}</h2>
+        <p>{{block.event.dateandtime}}</p>
     </div>
 </div>
 <div class="row">
