--- a/app/admin.reservations.printout/admin.reservations.printout.html
+++ b/app/admin.reservations.printout/admin.reservations.printout.html
@@ -1,3 +1,8 @@
+<div class="row admin-toolbar">
+    <div class="twelve columns">
+        <a class="button button-primary" href="#/dashboard">back</a>
+    </div>
+</div>
 <div class="row">
     <div class="twelve columns">
         <h2>{{eventAggregate.event.name}}</h2>
