Add button to initiate migrations

--- a/app/admin.dashboard/admin.dashboard.html
+++ b/app/admin.dashboard/admin.dashboard.html
@@ -2,3 +2,8 @@
 <events></events>
 <blocks></blocks>
 <categories></categories>
+<div class="row dashboard-content-row">
+    <div class="twelve columns">
+        <a ng-click="migrate()" class="button button-primary">migrate</a>
+    </div>
+</div>
