Display event location in block view

--- a/app/common.block/common.block.html
+++ b/app/common.block/common.block.html
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="twelve columns">
         <h2>{{block.event.name}}</h2>
-        <p>{{block.event.dateandtime}}</p>
+        <p>{{block.event.dateandtime}} - {{block.event.location}}</p>
     </div>
 </div>
 <div class="row">
