--- a/app/admin.html
+++ b/app/admin.html
@@ -39,6 +39,7 @@
 <script src="admin.config/config.js"></script>
 <script src="components/api/api.js"></script>
 <script src="components/polygonfrompoints/polygonfrompoints.js"></script>
+<script src="components/seatplan/seatplan.js"></script>
 <script src="components/canvas/canvas.js"></script>
 <script src="components/itemlist/itemlist.js"></script>
 <script src="admin.dashboard/admin.dashboard.js"></script>
@@ -47,6 +48,7 @@
 <script src="admin.blocks/admin.blocks.js"></script>
 <script src="admin.categories/admin.categories.js"></script>
 <script src="admin.reservations.printout/admin.reservations.printout.js"></script>
+<script src="admin.reservations.seatplan/admin.reservations.seatplan.js"></script>
 <script src="admin.event.blocks/admin.event.blocks.js"></script>
 <script src="admin.block.image/admin.block.image.js"></script>
 <script src="admin.block.seats/admin.block.seats.js"></script>
