--- a/app/admin.reservations.printout/admin.reservations.printout.html
+++ b/app/admin.reservations.printout/admin.reservations.printout.html
@@ -10,29 +10,21 @@
     </div>
 </div>
 <div class="row">
-    <div class="twelve columns">
-        <h2>Customer Reservations</h2>
+    <div class="six columns">
+        <h3>Customer Reservations</h3>
+        <div ng-repeat="reservationAggregate in eventAggregate.reservations">
+            <p><strong>{{reservationAggregate.metaData.order.firstname}} {{reservationAggregate.metaData.order.lastname}} - {{reservationAggregate.metaData.totalPrice}} {{currency}}:</strong></p>
+            <ul>
+                <li ng-repeat="reservation in reservationAggregate.reservations">
+                    {{reservation.seat.name}}
+                    <span ng-show="reservation.reservation.is_reduced"> (reduced)</span>
+                    - <strong>{{reservation.price}} {{currency}}</strong>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
-<div class="row" ng-repeat="reservationAggregate in eventAggregate.reservations">
-    <div class="twelve columns">
-        <p><strong>{{reservationAggregate.metaData.order.firstname}} {{reservationAggregate.metaData.order.lastname}} - {{reservationAggregate.metaData.totalPrice}} {{currency}}:</strong></p>
-        <ul>
-            <li ng-repeat="reservation in reservationAggregate.reservations">
-                {{reservation.seat.name}}
-                <span ng-show="reservation.reservation.is_reduced"> (reduced)</span>
-                - <strong>{{reservation.price}} {{currency}}</strong>
-            </li>
-        </ul>
-    </div>
-</div>
-<div class="row">
-    <div class="twelve columns">
-        <h2>Boxoffice Purchases</h2>
-    </div>
-</div>
-<div class="row">
-    <div class="twelve columns">
+    <div class="six columns">
+        <h3>Boxoffice Purchases</h3>
         <ul>
             <li ng-repeat="purchase in eventAggregate.boxofficePurchases">
                 {{purchase.seat.name}} - <strong>{{purchase.price}} {{currency}}</strong>
