--- a/app/admin.reservations/admin.reservations.html
+++ b/app/admin.reservations/admin.reservations.html
@@ -5,12 +5,12 @@
 </div>
 <div class="row dashboard-content-row" ng-repeat="eventAggregate in eventAggregates">
     <div class="eight columns">
-        {{eventAggregate.event.name}} - {{eventAggregate.event.dateandtime}}
+        {{eventAggregate.event.name}} - {{eventAggregate.event.dateandtime}}<br>
+        <strong>{{eventAggregate.reservations.length}}</strong> Reservations<br>
+        <strong>{{eventAggregate.boxofficePurchases.length}}</strong> Boxoffice purchases
     </div>
     <div class="four columns">
-        <a href="#/event/{{eventAggregate.event.id}}/reservations">
-            <strong>{{eventAggregate.reservations.length}}</strong> Reservations<br>
-            <strong>{{eventAggregate.boxofficePurchases.length}}</strong> Boxoffice purchases
-        </a>
+        <a class="button button-primary" href="#/event/{{eventAggregate.event.id}}/reservations">Reservations</a>
+        <a class="button button-primary" href="#/event/{{eventAggregate.event.id}}/seatplan">Seatplan</a>
     </div>
 </div>
