--- a/app/customer.html
+++ b/app/customer.html
@@ -44,6 +44,7 @@
 <script src="components/canvas/canvas.js"></script>
 <script src="components/basket/basket.js"></script>
 <script src="components/reserver/reserver.js"></script>
+<script src="common.seatplan.handlers/common.seatplan.handlers.js"></script>
 <script src="components/seatplan/seatplan.js"></script>
 <script src="common.toolbar/common.toolbar.js"></script>
 <script src="common.events/common.events.js"></script>
