--- a/app/admin.html
+++ b/app/admin.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="ticketbox.admin">
 <head>
     <meta charset="utf-8">
-    <title>Ticket reservation</title>
+    <title>Ticket reservation - Administration</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -32,6 +32,8 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-translate/angular-translate.js"></script>
+<script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/ocanvas/index.js"></script>
 <script src="components/progressInterceptor/progressInterceptor.js"></script>
