--- a/app/admin.reservations.seatplan/admin.reservations.seatplan.html
+++ b/app/admin.reservations.seatplan/admin.reservations.seatplan.html
@@ -1,6 +1,6 @@
 <div class="row admin-toolbar no-print">
     <div class="twelve columns">
-        <a class="button button-primary" href="#/dashboard">back</a>
+        <a class="button button-primary" href="#/dashboard" translate>BACK BUTTON</a>
     </div>
 </div>
 <div class="row">
