--- a/app/admin.reservations.printout/admin.reservations.printout.html
+++ b/app/admin.reservations.printout/admin.reservations.printout.html
@@ -5,17 +5,17 @@
 </div>
 <div class="row">
     <div class="twelve columns">
-        <h2>{{eventAggregate.event.name}}</h2>
-        <p>{{eventAggregate.event.dateandtime}}</p>
+        <h2>{{event.name}}</h2>
+        <p>{{event.dateandtime}}</p>
     </div>
 </div>
 <div class="row">
     <div class="six columns">
         <h3 translate>RESERVATIONS LIST TITLE</h3>
-        <div ng-repeat="reservationAggregate in eventAggregate.reservations">
-            <p><strong>{{reservationAggregate.metaData.order.firstname}} {{reservationAggregate.metaData.order.lastname}} - {{reservationAggregate.metaData.totalPrice}} {{currency}}:</strong></p>
+        <div ng-repeat="order in orders">
+            <p><strong>{{order.firstname}} {{order.lastname}} - {{order.totalPrice}} {{currency}}:</strong></p>
             <ul>
-                <li ng-repeat="reservation in reservationAggregate.reservations">
+                <li ng-repeat="reservation in order.reservations">
                     {{reservation.seat.name}}
                     <span ng-show="reservation.reservation.is_reduced"> (reduced)</span>
                     - <strong>{{reservation.price}} {{currency}}</strong>
@@ -25,10 +25,15 @@
     </div>
     <div class="six columns">
         <h3 translate>BOXOFFICE PURCHASES LIST TITLE</h3>
-        <ul>
-            <li ng-repeat="purchase in eventAggregate.boxofficePurchases">
-                {{purchase.seat.name}} - <strong>{{purchase.price}} {{currency}}</strong>
-            </li>
-        </ul>
+        <div ng-repeat="boxofficePurchase in boxofficePurchases">
+            <p><strong>{{boxofficePurchase.boxoffice}} - {{boxofficePurchase.totalPrice}} {{currency}}</strong></p>
+            <ul>
+                <li ng-repeat="reservation in boxofficePurchase.reservations">
+                    {{reservation.seat.name}}
+                    <span ng-show="reservation.reservation.is_reduced"> (reduced)</span>
+                    - <strong>{{reservation.price}} {{currency}}</strong>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
