--- a/app/common.block/common.block.html
+++ b/app/common.block/common.block.html
@@ -11,6 +11,6 @@
 </div>
 <div class="row">
     <div class="twelve columns">
-        <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="block.event_id" seats="block.seats">
+        <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="block.event_id" categoryid="block.category_id" seats="block.seats">
     </div>
 </div>
