--- a/app/admin.reservations.seatplan/admin.reservations.seatplan.html
+++ b/app/admin.reservations.seatplan/admin.reservations.seatplan.html
@@ -12,6 +12,6 @@
 <div class="row" ng-repeat="block in blocks">
     <div class="twelve columns">
         <p><strong>{{block.block.name}}</strong></p>
-        <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="event.id" seats="block.seats"> 
+        <ng-seat-selection src="block.block.seatplan_image_data_url" eventid="event.id" categoryid="category.id" seats="block.seats"> 
     </div>
 </div>
