--- a/app/customer.html
+++ b/app/customer.html
@@ -36,6 +36,7 @@
 <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/ocanvas/index.js"></script>
+<script src="https://js.braintreegateway.com/js/braintree-2.27.0.min.js"></script>
 <script src="components/progressInterceptor/progressInterceptor.js"></script>
 <script src="customer.app.js"></script>
 <script src="customer.config/config.js"></script>
@@ -51,6 +52,7 @@
 <script src="common.event/common.event.js"></script>
 <script src="common.block/common.block.js"></script>
 <script src="customer.checkout/customer.checkout.js"></script>
+<script src="customer.purchase/customer.purchase.js"></script>
 <!-- /scripts -->
 </body>
 </html>
